karavan-app/src/main/webui/src/ui/features/project/designer/beans/bean.css
/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

.karavan .bean-card {
    /*max-width: 800px;*/
    border-style: dashed;
    border-radius: 42px;
    border-width: 1px;
    padding: 16px 6px 16px 16px;
    margin-right: 80px;
    margin-left: 80px;
    position: relative;
}

.karavan .bean-card-unselected {
    border-color: var(--pf-t--global--color--brand--200);
    background-color: transparent;
}

.karavan .bean-card-selected {
    border-color: var(--pf-t--global--color--brand--100);
}

.karavan .bean-card .title {
    margin: auto 0 auto 0;
    font-weight: bold;
    white-space: nowrap;
}

.karavan .bean-card .description {
    margin: auto 0 auto 0;
    min-width: 200px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.karavan .bean-card .delete-button {
    position: relative;
    right: 6px;
    line-height: 1;
    border: 0;
    padding: 0;
    margin: 0;
    background: transparent;
    color: #909090;
    visibility: hidden;
    z-index: 100;
}

.karavan .bean-card:hover .delete-button {
    visibility: visible;
}

/*.karavan .bean-designer {*/
/*    display: block;*/
/*    height: 100vh;*/
/*    width: 100%;*/
/*    overflow-y: auto;*/
/*    padding-bottom: 106px;*/
/*}*/

.karavan .bean-designer .gallery {
    padding-top: 16px;
    padding-bottom: 16px;
}

.karavan .bean-designer .properties {
    padding: 10px 10px 10px 10px;
    background: transparent;
    width: 100%;
    height: 100%;
    overflow: auto;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}
/*Beans*/
.karavan .bean-designer .properties .bean-property {
    display: flex;
    flex-direction: row;
    gap: 3px;
}

.karavan .bean-designer .properties .bean-property .delete-button {
    padding: 3px;
    color: #b1b1b7;
}

